artist home page

--- a/app/src/main/res/layout/fragment_home_artist.xml
+++ b/app/src/main/res/layout/fragment_home_artist.xml
@@ -1,13 +1,107 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".artist.fragments.home.ArtistHomeFragment">
-
-    <TextView
+    android:background="@color/colorPrimaryDark"
+    android:fillViewport="true">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        >
 
-</FrameLayout>
+        <ImageButton
+            android:id="@+id/btn_home_artist_option"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_options"
+            android:background="@android:color/transparent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <ImageView
+            android:id="@+id/image_home_artist"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginTop="30dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/text_edit_album_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/image_home_artist"
+            android:textSize="25sp"
+            android:text="artist name"
+            />
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
+
+            android:id="@+id/recycler_view_popular_release"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toTopOf="@id/text_add_new_song"
+            app:layout_constraintTop_toBottomOf="@id/text_edit_album_name" />
+
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:textSize="20sp"
+            android:id="@+id/text_add_new_song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="add song"
+            app:layout_constraintTop_toBottomOf="@id/recycler_view_popular_release"
+            app:layout_constraintEnd_toStartOf="@+id/btn_add_song_popular_releases"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="656dp"
+
+            android:textColor="@color/colorAccent"
+            android:layout_marginBottom="20dp"
+            app:layout_goneMarginBottom="30dp"
+            />
+
+        <ImageButton
+            android:id="@+id/btn_add_song_popular_releases"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_plus"
+            android:tint="@color/colorAccent"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/text_add_new_song"
+            tools:layout_editor_absoluteY="656dp"
+            app:layout_constraintTop_toTopOf="@id/text_add_new_song"
+            android:layout_marginRight="10dp"/>
+
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="save"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@drawable/rounded_edge_button"
+            android:backgroundTint="@color/paleOrange"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="20dp"
+
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
+
