--- a/app/src/main/res/layout/fragment_home_artist.xml
+++ b/app/src/main/res/layout/fragment_home_artist.xml
@@ -31,7 +31,8 @@
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
         <TextView
             android:id="@+id/text_edit_album_name"
             android:layout_width="wrap_content"
@@ -49,12 +50,15 @@
 
             android:id="@+id/recycler_view_popular_release"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@id/text_add_new_song"
-            app:layout_constraintTop_toBottomOf="@id/text_edit_album_name" />
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_edit_album_name"
+            app:layout_constraintBottom_toTopOf="@id/btn_save_popular_songs"
+            />
+<!--
         <TextView
             android:layout_marginLeft="10dp"
             android:textSize="20sp"
@@ -88,9 +92,10 @@
             tools:layout_editor_absoluteY="656dp"
             app:layout_constraintTop_toTopOf="@id/text_add_new_song"
             android:layout_marginRight="10dp"/>
-
+-->
 
         <Button
+            android:id="@+id/btn_save_popular_songs"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="save"
@@ -99,6 +104,20 @@
             android:backgroundTint="@color/paleOrange"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="20dp"
+
+            />
+
+        <Button
+            android:id="@+id/btn_add_popular_song"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="add song"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@drawable/rounded_edge_button"
+            android:backgroundTint="@color/paleOrange"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="20dp"
 
             />
