--- a/app/src/main/res/layout/fragment_home_artist.xml
+++ b/app/src/main/res/layout/fragment_home_artist.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-
+<!--
         <ImageButton
             android:id="@+id/btn_home_artist_option"
             android:layout_width="wrap_content"
@@ -33,15 +33,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
+
+        -->
         <TextView
             android:id="@+id/text_edit_album_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_home_artist"
+            android:padding="30dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:textSize="25sp"
-            android:text="artist name"
+            android:text="Top songs"
             />
 
 
